# aoc2022

./: .gitignore  .pycrunch-config.yaml  pyproject.toml
src/aoc2022/day_01/: calorie_counting.py
tests/day_01/: test_calorie_counting.py
