[tool.poetry]
name = "aoc2022"
version = "0.1.0"
description = ""
authors = ["MLK <mikkel.levisen@lego.com>"]
readme = "README.md"
packages = [{include = "aoc2022", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.4"


[tool.poetry.group.dev.dependencies]
pycrunch-engine = "^1.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
